syntax = "proto3";

package coupon.v1;

option go_package = "github.com/ssipflow/coupon-issuance/gen/proto/coupon/v1;couponv1";

service CouponService {
  rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);
  rpc IssueCoupon(IssueCouponRequest) returns (IssueCouponResponse);
}

message CreateCampaignRequest {
  string name = 1;
  int64 total_count = 2;
  string start_time = 3; // ISO8601 string
}

message CreateCampaignResponse {
  int32 campaign_id = 1;
}

message GetCampaignRequest {
  int32 campaign_id = 1;
}

message GetCampaignResponse {
  string name = 1;
  repeated string issued_coupons = 2;
}

message IssueCouponRequest {
  int32 campaign_id = 1;
  int32 user_id = 2;
}

message IssueCouponResponse {
  string coupon_code = 1;
}